Mon Dec 14 08:16:32 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/run_test.pl:
        * performance-tests/Benchmark/RoundTripClient/run_test.pl:
        * performance-tests/Benchmark/RoundTripClient/run_test_ior_cad.pl:
        * tests/Bug_3769_Regression/descriptors/run_test.pl:
        * tests/IDL3/Events/Any/run_test.pl:
        * tests/IDL3_to_XMI/IDL2XMI_Test/run_test.pl:
          Resolved fuzz errors/warnings.

Mon Dec 14 07:39:46 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp
        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/1_to_5.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_Receivers.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_Senders.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/5_to_1.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/DeploymentPlan.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/ReceiverOnly.cdp
        * connectors/dds4ccm/examples/Hello/descriptors/SenderOnly.cdp
        * connectors/dds4ccm/examples/Quoter/descriptors/Plan.cdp
        * connectors/dds4ccm/examples/Shapes/descriptors/Plan.cdp
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.h
        * connectors/dds4ccm/idl/ccm_dds.idl
        * connectors/dds4ccm/idl/dds4ccm_ConnectorStatusListener.idl
        * connectors/dds4ccm/idl/dds4ccm_DataListenerControl.idl
        * connectors/dds4ccm/idl/dds4ccm_PortStatusListener.idl
        * connectors/dds4ccm/idl/dds4ccm_StateListenerControl.idl
        * connectors/dds4ccm/idl/dds_rtf2_dcps.idl
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.h
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.h
        * connectors/dds4ccm/impl/ndds/DDS_Get_T.cpp